tried to fix aligning search bar center of screen, didn't work, going to bed

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #171717;
-    color: #EDEDED
+    color: #EDEDED;
 }
 
 .navbar {
@@ -13,6 +13,11 @@ body {
 .main-search {
     display: flex;
     justify-content: center;
+    padding: 5px
+}
+
+.main-search-container {
+    min-height: 60vh;
 }
 
 
